# AI-Equity-Research

./: .gitignore  README.md  SPEC.md  pyproject.toml
config/: agent_prompts.yaml  settings.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/launchd/: com.ai-equity-research.scheduler.plist
docs/spec/: AI_LANDSCAPE_TAXONOMY.md  ARCHITECTURE.md  DATA_MODEL.md  IMPLEMENTATION_GUIDE.md  MAPPING_REVIEW_WORKFLOW.md  MEMO_TEMPLATE_RUBRIC.md  MVP_BACKLOG.md  ONTOLOGY.md  ONTOLOGY_MAPPINGS.json  ONTOLOGY_MAPPINGS.md  PRD.md  README.md  SEQUENCE_DIAGRAMS.md  SERVICE_INTERFACES.md  SPRINT_BACKLOG.md
scheduler/: runner.py
scripts/: brainstorm_data_needs.py  build_hub.py  export_ontology_mappings_csv.py  install_service.py  run_hub_daily.py  run_hub_pipeline.py  run_once.py  run_swarm_cycle.py  run_swarm_loop.py  test_new_data_sources.py  validate_ontology_mappings.py
src/agents/: base.py  registry.py
src/data_sources/: aggregator.py  alpha_vantage.py  base.py  earnings_calendar.py  fintwit.py  fred_macro.py  github_tracker.py  news_api.py  reddit_sentiment.py  registry.py  rss_news.py  sec_edgar.py  sec_insider.py  stocktwits.py  twitter_stub.py  web_search.py  yahoo_finance.py
src/hub/: __init__.py  evidence.py  landscape.py  memo.py  ontology.py  runner.py  swarm_scoring.py
src/llm/: client.py
src/notifications/: discord_notifier.py  email_notifier.py  slack_notifier.py
src/orchestration/: convergence_detector.py  layer_executor.py  loop_controller.py  state_machine.py
src/reports/: generator.py
src/storage/: database.py  state_manager.py
(+24 files in other folders)
